fix overlapping sidebar

--- a/UI/CSS/Sidebar.css
+++ b/UI/CSS/Sidebar.css
@@ -48,6 +48,14 @@ body{
     background: var(--sidebar-color);
     transition: var(--tran-05);
     z-index: 10000; 
+    min-width: -250px;
+    max-width: 250px;
+    min-height: 100vh;
+}
+@media (max-width: 768px) {
+    #mySidebar {
+        margin-left: -250px;
+    }
 }
 .sidebar.close{
     width: 80px;
@@ -499,10 +507,11 @@ flex: none;
 order: 1;
 flex-grow: 0;
 }
-#main-content  {
+#main-content.container.allContent-section.py-4  {
+    width: calc(100% - 250px - 250px);
+    /* fix overlap with sidebar by add width */
+}
+.wrapper {
     display: flex;
     width: 100%;
-    align-items: stretch;
-
-
 }
